methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:5: error: not found: value vu
      vu = true
      ^MethodsReturning:9: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i<- 1 to 6){
        ^