methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBaggle = false
  for (i<- 1 to 6){
    if (estSurBiscuit){
      vu = true
    }
    avance()
  }
  for (i<- 1 to 6){
    recule()
  }
}